# coverage-threshold

./: .bumpversion.cfg  .coveragerc  .flake8  .gitignore  .travis.yml  LICENSE  Pipfile  README.md  coverage.json  mypy.ini  pyproject.toml  setup.py  tox.ini
.github/workflows/: master.yml  pull_request.yml  test.yml
coverage_threshold/: __main__.py
coverage_threshold/cli/: __init__.py  args.py  colors.py  main.py  read_config.py  read_report.py
coverage_threshold/lib/: __init__.py  _all_checks.py  _common.py  _file.py  _totals.py  check_result.py  functools.py
coverage_threshold/model/: config.py  coverage_json.py  report.py  util.py
example_project/: .coveragerc
example_project/src/: app.py
example_project/tests/: test_app.py
scripts/: build.sh  ci.sh  clean.sh  coverage.sh  lint-fix.sh  lint.sh  release.sh  test.sh  type-check.sh
src/coverage_threshold/: __init__.py
src/coverage_threshold/cli/: read_config.py
src/coverage_threshold/lib/: _common.py  _file.py  alternative.py
tests/: test_file.py
tests/integration/: test_cli.py
tests/unit/config/: complex.pyproject.toml  legacy.pyproject.toml  pyproject.toml  test_read_config.py
tests/unit/lib/: test_all_checks.py  test_check_result.py  test_common.py
tests/unit/model/: test_config.py  test_report.py
