[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.isort]
profile = "black"
src_paths = ["coverage_threshold", "tests"]

[tool.coverage-threshold]
line_coverage_min = 0
file_line_coverage_min = 100
file_branch_coverage_min = 100

[tool.coverage-threshold.modules."coverage_threshold/cli/"]
file_line_coverage_min = 0
file_branch_coverage_min = 0

[tool.coverage-threshold.modules."coverage_threshold/__main__.py"]
file_line_coverage_min = 0
file_branch_coverage_min = 0
